--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
 	],
 	"activationEvents": [
 		"*",
-		"onCommand:shellLauncher.launch"
+		"onCommand:shellLauncher.launch",
+		"onCommand:terminalTest.sendText"
 	],
 	"main": "./out/extension.js",
 	"contributes": {
@@ -23,11 +24,29 @@
 			{
 				"command": "shellLauncher.launch",
 				"title": "Shell Launcher: Launch"
+			},
+			{
+				"command": "terminalTest.sendText",
+				"title": "Terminal API: Send Text"
+			},
+			{
+				"command": "extension.terminalCapture.runCapture",
+				"title": "Terminal: Capture"
 			}
 		],
 		"configuration": {
-			"title": "Shell Launcher configuration",
+			"title": "Shell Launcher and Terminal Capture configuration",
 			"properties": {
+				"terminalCapture.enable": {
+					"type": "boolean",
+					"description": "If false, disable the terminal capture extension",
+					"default": true
+				},
+				"terminalCapture.useClipboard": {
+					"type": "boolean",
+					"description": "If false, use the cache mode that tracks all history",
+					"default": true
+				},
 				"shellLauncher.shells.osx": {
 					"type": "array",
 					"description": "A list of shell configurations for macOS",
@@ -156,5 +175,6 @@
 	},
 	"dependencies": {
 		"path": "^0.12.7"
-	}
+	},
+	"trace": true
 }
